# ToyOS

./: .clangd  .gitignore  .gitmodules  LICENSE  README.md  bochsrc.txt  floopy-os-crossfile.txt  make_sysroot.py  make_toolchain.sh  meson.build  run_bochs.py  run_qemu.py  toy-os-crossfile.txt
apps/: gen_sysroot.py  link.ld  meson.build
apps/system_server/: meson.build
apps/system_server/init/: hello_cpp.cc  main.c  meson.build  print.S  print.asm
bootloader/: meson.build
bootloader/boot/: multiboot.h  toy_boot.h
bootloader/stage1/: boot.S  boot.asm  linker.ld  meson.build
bootloader/stage2/: bios_vbe.h  elf.c  elf.h  linker.ld  meson.build  printf.c  printf.h  stage2.asm  stage2.c
bootloader/stage2/disk/: fat.c  fat.h  mbr.c  mbr.h
bootloader/stage2/screen/: screen.c  screen.h
bootloader/stage2/x86/: bios.h  bios_call.asm  vbe.h
common/elf/: meson.build
common/elf/inc/elf/: elf.h  elf_file.hpp  elf_obj.hpp
common/elf/src/: elf.c  elf_file.cc  elf_obj.cc
common/elf/test/: elf_file_host.cc  elf_file_host.hpp  host_elf_obj.cc  host_elf_obj.hpp  host_elf_test.cc  test.cc  test_common.cc
common/fatfs/: ffconf.h  meson.build
common/limine/: limine.cfg  meson.build
common/lwext4/: meson.build
common/lwext4/test/: ext2_test.cc
kernel/: linker.ld  meson.build
kernel/include/driver/pci/: ide.h  pci.h
kernel/include/sys/: fcntl.h  mman.h
kernel/include/util/: list.hpp  string_view.hpp
kernel/klibc/: inttypes.h  stdio.h  stdlib.c  stdlib.h  string.c  string.h
kernel/src/: cxx_runtime.cc  kmain.c  kmain.cc  kpanic.h  kprintf.c  kprintf.h  runtime.cc
kernel/src/acpi/: acpi.cc  acpi.hpp  lai_port.c
kernel/src/boot/: entry.asm
kernel/src/driver/pci/: ide.c  pci.c
kernel/src/elf/: elf_file_impl.cc  elf_file_impl.hpp  elf_impl.c  elf_loader.c  elf_loader.cc  elf_loader.h  elf_loader.hpp  elf_obj_impl.cc  elf_obj_impl.hpp
kernel/src/fs/: fatfs_backend.c  vfs.c  vfs.cc  vfs.h  vfs.hpp
kernel/src/fs/ext4/: ext4_fs.cc  ext4_fs.hpp
kernel/src/fs/mem/: mem_fs.c  mem_fs.cc  mem_fs.h  mem_fs.hpp  std_fs.cc  std_fs.hpp
kernel/src/mmu/: heap.c  heap.h  page.asm  page.c  page.cc  page.h  page.hpp  page_allocator.cc  page_allocator.hpp  palloc.c  palloc.h  palloc_test.cc
kernel/src/proc/: proc.asm  proc.c  proc.cc  proc.h  stack_frame.h
kernel/src/screen/: screen.c  screen.h
kernel/src/syscall/: sys_fork.cc  sys_fork.hpp  syscall.c  syscall.cc  syscall.h
kernel/src/util/: string_view.cc  string_view_test.cc
kernel/src/x86/: gdt.asm  gdt.c  gdt.h  idt.asm  idt.c  idt.h  io.asm  io.h  irq.c  irq.h  isr.asm  isr.c  isr.h  pic.c  pic.h  timer.c  timer.h
patchs/: binutils-2.93.patch  gcc-12.2.0.patch
subprojects/: font8x8.wrap  lai.wrap  lwext4.wrap  umm_malloc.wrap
tools/: copy_apps.cc  ext4_file_tools.cc  ext4_host_backend.cc  ext4_host_backend.hpp  gen_disk.py  gen_floppy.py  install_apps.py  install_limine.py  meson.build  mk_floppy.cc
tools/fatfs/: diskio.c  diskio.h  ff.c  ff.h  ffconf.h  ffsystem.c  floppy.img
